# syncai-candi-server

./: README.md
crew-ai-agent/: Dockerfile  README.md  crew_agent.py  crew_definition.py  docker-compose.yml  main.py  railway.json  requirements.txt  server.py
mcp-server/: Dockerfile  claude_desktop_config.json  docker-compose.yml  pyproject.toml  requirements.txt  server.py
mcp-server/documents/: installation_guide.md  tool_document.md
mcp-server/prompts/: prompts.md
testing/: test-complete-flow.py  test-complete-flow.sh
