[project]
name = "cardanomcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.14",
    "dotenv>=0.9.9",
    "fastmcp>=2.5.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "postgrest>=0.19.3",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "supabase>=2.13.0",
    "tabulate>=0.9.0",
    "starlette>=0.46.1", 
]
